--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-      - run: npm install
+      - name: Install dependencies
+        run: npm install
+      - name: Create deployment package
+        run: |
+          zip -r application.zip . -x "node_modules/*" ".git/*" ".github/*" "tests/*"
       - name: Deploy to Elastic Beanstalk
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -22,8 +26,6 @@ jobs:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
-          npm run build
-          zip -r application.zip .
-          aws s3 cp application.zip s3://elasticbeanstalk-ap-southeast-2-591408364730/
-          aws elasticbeanstalk create-application-version --application-name "DEV API" --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-ap-southeast-2-591408364730,S3Key=application.zip
-          aws elasticbeanstalk update-environment --environment-name DEVAPI-env --version-label ${{ github.sha }}
+          aws s3 cp application.zip s3://elasticbeanstalk-us-east-1-<your-account-id>/
+          aws elasticbeanstalk create-application-version --application-name RentSync --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-us-east-1-<your-account-id>,S3Key=application.zip
+          aws elasticbeanstalk update-environment --environment-name RentSync-env --version-label ${{ github.sha }}
