--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,24 @@ name: Deploy to Elastic Beanstalk
 on:
   push:
     branches: [main]
+    paths:
+      - "src/**"
+      - "package.json"
+      - "package-lock.json"
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Target environment (e.g., DEVAPI-env)"
+        required: true
+        default: "DEVAPI-env"
 
 jobs:
+  test:
+    uses: ./.github/workflows/ci.yml
   deploy:
+    needs: test # Wait for test job to complete
     runs-on: ubuntu-latest
-
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.environment == 'DEVAPI-env' # Condition for dispatch
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -28,4 +41,4 @@ jobs:
         run: |
           aws s3 cp application.zip s3://elasticbeanstalk-ap-southeast-2-591408364730/
           aws elasticbeanstalk create-application-version --region ap-southeast-2 --application-name "DEV API" --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-ap-southeast-2-591408364730,S3Key=application.zip
-          aws elasticbeanstalk update-environment --region ap-southeast-2 --environment-name DEVAPI-env --version-label ${{ github.sha }}
+          aws elasticbeanstalk update-environment --region ap-southeast-2 --environment-name ${{ github.event.inputs.environment || 'DEVAPI-env' }} --version-label ${{ github.sha }}
