--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: "Target environment (e.g., DEVAPI-env)"
+        description: "Target environment"
         required: true
         default: "DEVAPI-env"
 
@@ -18,9 +18,9 @@ jobs:
   test:
     uses: ./.github/workflows/ci.yml
   deploy:
-    needs: test # Wait for test job to complete
+    needs: test
     runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch' || github.event.inputs.environment == 'DEVAPI-env' # Condition for dispatch
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.environment == 'DEVAPI-env'
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
