--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,25 +3,12 @@ name: CI
 on:
   push:
     branches: [main]
-    paths:
-      - "src/**"
-      - "tests/**"
-      - "package.json"
-      - "package-lock.json"
   pull_request:
     branches: [main]
-    paths:
-      - "src/**"
-      - "tests/**"
-      - "package.json"
-      - "package-lock.json"
-  schedule:
-    - cron: "0 0 * * *" # Daily at midnight UTC
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.repository != 'Evan-Codes88/CI-CD-api' || !github.event.repository.archived
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -30,11 +17,19 @@ jobs:
           node-version: "18"
       - name: Install dependencies
         run: npm install
+      - name: Debug Jest setup
+        run: |
+          npx jest --version
+          npm ls jest
       - name: Run tests and generate JSON output
         run: npx jest --ci --json > test-results.json || echo "Tests failed, but continuing to process results"
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      - name: Debug test results
+        run: |
+          ls -la
+          cat test-results.json || echo "Failed to read test-results.json"
       - name: Create custom test log and export data
         run: |
           node -e "
@@ -69,6 +64,13 @@ jobs:
             fs.writeFileSync('test-results-custom.log', log.join('\n'));
             fs.writeFileSync('test-summary.json', JSON.stringify(summary, null, 2));
           "
+      - name: Debug AWS setup
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws --version
+          aws s3 ls s3://elasticbeanstalk-ap-southeast-2-591408364730/ --region ap-southeast-2 || echo "Failed to list S3 bucket"
       - name: Upload test log to S3
         if: always()
         env:
