--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,16 +3,6 @@ name: Deploy to Elastic Beanstalk
 on:
   push:
     branches: [main]
-    paths:
-      - "src/**"
-      - "package.json"
-      - "package-lock.json"
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: "Target environment"
-        required: true
-        default: "DEVAPI-env"
 
 jobs:
   test:
@@ -20,7 +10,6 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch' || github.event.inputs.environment == 'DEVAPI-env'
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -32,6 +21,13 @@ jobs:
       - name: Create deployment package
         run: |
           zip -r application.zip . -x "node_modules/*" ".git/*" ".github/*" "tests/*"
+      - name: Debug AWS setup
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws --version
+          aws s3 ls s3://elasticbeanstalk-ap-southeast-2-591408364730/ --region ap-southeast-2 || echo "Failed to list S3 bucket"
       - name: Deploy to Elastic Beanstalk
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,6 +35,6 @@ jobs:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
-          aws s3 cp application.zip s3://elasticbeanstalk-ap-southeast-2-591408364730/
-          aws elasticbeanstalk create-application-version --region ap-southeast-2 --application-name "DEV API" --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-ap-southeast-2-591408364730,S3Key=application.zip
-          aws elasticbeanstalk update-environment --region ap-southeast-2 --environment-name ${{ github.event.inputs.environment || 'DEVAPI-env' }} --version-label ${{ github.sha }}
+          aws s3 cp application.zip s3://elasticbeanstalk-ap-southeast-2-591408364730/ || echo "Failed to upload to S3"
+          aws elasticbeanstalk create-application-version --region ap-southeast-2 --application-name "DEV API" --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-ap-southeast-2-591408364730,S3Key=application.zip || echo "Failed to create application version"
+          aws elasticbeanstalk update-environment --region ap-southeast-2 --environment-name DEVAPI-env --version-label ${{ github.sha }} || echo "Failed to update environment"
