--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,27 +10,24 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "18"
       - name: Install dependencies
         run: npm install
       - name: Debug Jest setup
         run: |
-          npx jest --version
-          npm ls jest
+          npx jest --version || echo "Jest not found"
+          npm ls jest || echo "Jest not installed"
       - name: Run tests and generate JSON output
-        run: npx jest --ci --json > test-results.json || echo "Tests failed, but continuing to process results"
+        run: npx jest --ci --json > test-results.json || echo "Tests failed, but continuing"
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      - name: Debug test results
-        run: |
-          ls -la
-          cat test-results.json || echo "Failed to read test-results.json"
       - name: Create custom test log and export data
+        if: always()
         run: |
           node -e "
             const fs = require('fs');
@@ -42,14 +39,7 @@ jobs:
                 'Total Tests: ' + (results.numTotalTests || 'N/A'),
                 'Passed: ' + (results.numPassedTests || 'N/A'),
                 'Failed: ' + (results.numFailedTests || 'N/A'),
-                'Pending: ' + (results.numPendingTests || 'N/A'),
-                results.testResults?.map((suite, i) => (
-                  'Suite ' + (i + 1) + ': ' + (suite.testFilePath || 'Unknown') + '\n' +
-                  (suite.testResults?.map(test => (
-                    '- ' + (test.title || 'Unknown') + ': ' + (test.status || 'Unknown') +
-                    (test.status === 'failed' ? '\n  Error: ' + (test.failureMessages?.join('\n  ') || 'No error message') : '')
-                  )).join('\n') || 'No test results')
-                )).join('\n\n') || 'No test suites'
+                'Pending: ' + (results.numPendingTests || 'N/A')
               );
               summary.tests = {
                 total: results.numTotalTests || 0,
@@ -65,12 +55,13 @@ jobs:
             fs.writeFileSync('test-summary.json', JSON.stringify(summary, null, 2));
           "
       - name: Debug AWS setup
+        if: always()
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws --version
-          aws s3 ls s3://elasticbeanstalk-ap-southeast-2-591408364730/ --region ap-southeast-2 || echo "Failed to list S3 bucket"
+          aws s3 ls s3://elasticbeanstalk-ap-southeast-2-591408364730/test-logs/ --region ap-southeast-2 || echo "Failed to list S3 test-logs"
       - name: Upload test log to S3
         if: always()
         env:
