--- a/.ebextensions/node-version.config
+++ b/.ebextensions/node-version.config
@@ -1,6 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:application:
-    Application Healthcheck URL: "/healthcheck"
+  aws:elasticbeanstalk:container:nodejs:
+    NodeVersion: "18.20.4"
 
-  aws:elasticbeanstalk:environment:process:default:
-    NodeVersion: 18.20.4
